# Agentic_Code_Studio

./: .env  .gitignore  PHASE_3_IMPLEMENTATION.md  README.md  REAL_TIME_LOGS.md  customer_data.csv  main.py  pyproject.toml  test_db_connection.py  test_logs.py
outputs/generated_code/auth_service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml
outputs/generated_code/ml_pipeline/: .gitignore  README.md  pyproject.toml  setup.py
outputs/generated_code/p1/: .gitignore  README.md
outputs/generated_code/todo_app/: requirements.txt
outputs/sessions/00607453/: metadata.json
outputs/sessions/02785064/: metadata.json
outputs/sessions/056a4a74/: metadata.json
outputs/sessions/062e8575/: metadata.json
outputs/sessions/067fa3b6/: metadata.json
outputs/sessions/0d85d077/: metadata.json
outputs/sessions/1148adce/: metadata.json
outputs/sessions/15d01a73/: metadata.json
outputs/sessions/165fca67/: metadata.json
outputs/sessions/17d02eb6/: generated_script_20251205_070510.py  metadata.json
outputs/sessions/1b387ffb/: generated_script_20251205_125713.py  metadata.json
outputs/sessions/1c043316/: metadata.json
scripts/: integration_tests.py  run_edge_cases.py  setup.sh
src/: __init__.py
src/agents/: build_agent.py  code_generator.py  orchestrator.py  project_scaffold.py  project_validator.py  testing_agent.py
src/config/: project_templates.py  prompts.py  settings.py
src/models/: schemas.py
src/tools/: code_executor.py
src/ui/: streamlit_app.py
src/utils/: error_parser.py  logger.py  streamlit_log_handler.py
(+129 files in other folders)
